Fragment & Map Dependencies
--Added dependency for androix Navigation (with SafeArgs)
--Added dependency for Mapbox
--Added location permissions required by Mapbox
--Added basic Fragment for Chart tab
--Removed boilerplate code from MainActivity
--Moved FragmentInteraction interface into separate class, so that it can be extended by other Fragments
--Added NavHostFragment to MainActivity to support swapping between different Fragments (one Fragment for each tab)
--Added navigation graph to keep track of navigations destinations
--Added Mapbox API access token to string resource file

--- a/Binnacle/app/src/main/res/values/strings.xml
+++ b/Binnacle/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="title_readouts">Readouts</string>
     <string name="title_binnacle">Binnacle</string>
     <string name="title_charts">Charts</string>
+    <string name="access_token">pk.eyJ1Ijoid2lsbG53YWxrZXIiLCJhIjoiY2l5NzU5YWw0MDAycjMzbzZtbnIycWFvbyJ9.bze7QA84drv6yb37eK8xqg</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
