--- a/Binnacle/app/src/main/res/values/strings.xml
+++ b/Binnacle/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="speed_value_placeholder">0 kts</string>
+    <string name="heading_value_placeholder">0°</string>
 </resources>
